--- a/index.html
+++ b/index.html
@@ -5,8 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Random Password Generator</title>
+     <!--To make randomness simple and easy to read used randojs.com-->
+     <script src="https://randojs.com/1.0.0.js"></script>
+      <!-- css reference -->
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    
+    <div class="wrapper">
+        <header>
+          <h1>Password Generator</h1>
+        </header>
+        <div class="card">
+          <div class="card-header">
+            <h2>Generate a Password</h2>
+          </div>
+          <div class="card-body">
+            <textarea
+              readonly
+              id="password"
+              placeholder="Your Secure Password"
+              aria-label="Generated Password"
+            ></textarea>
+          </div>
+          <div class="card-footer">
+            <button id="generate" class="btn">Generate Password</button>
+          </div>
+        </div>
+      </div>
+        <script src="script.js"></script>
 </body>
 </html>
